--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@craco/craco": "^6.3.0",
     "axios": "^0.23.0",
     "cra-template": "1.1.2",
+    "draft-js": "^0.11.7",
     "placeholder-loading": "^0.5.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.3.0",
