--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.7.2",
     "react-spinners": "^0.11.0",
     "tailwind-scrollbar": "^1.3.1"
   },
