--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "draft-js": "^0.11.7",
     "placeholder-loading": "^0.5.0",
     "react": "^17.0.2",
+    "react-calendar": "^4.2.1",
     "react-color": "^2.19.3",
     "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
