--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.3.0",
     "axios": "^0.23.0",
     "cra-template": "1.1.2",
+    "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "placeholder-loading": "^0.5.0",
     "react": "^17.0.2",
